# subgraph-mock

./: .typos.toml  Cargo.toml  Dockerfile  LICENSE  README.md  dprint.json  example-config.yaml
.cargo/: config.toml
.config/mise/: mise.toml
.github/: CODEOWNERS  renovate.json5
.github/workflows/: build-and-test.yaml  publish-subgraph-mock.yaml  release-subgraph-mock.yaml
src/: config.rs  latency.rs  lib.rs  main.rs
src/handle/: graphql.rs  mod.rs
src/state/: config.rs  mod.rs  schema.rs
src/state/schema/: federation.rs  mod.rs
src/state/schema/federation/: definitions.rs  mod.rs
src/state/schema/test-data/: federated-subgraph-validated.graphql  federated-subgraph.graphql  non-federated-subgraph-validated.graphql  non-federated-subgraph.graphql  supergraph-validated.graphql  supergraph.graphql
tests/: test_config_defaults.rs  test_custom_ratios.rs  test_default_response_generation.rs  test_error_generation.rs  test_harness.rs  test_latency_shapes.rs  test_saw_latency_config.rs  test_scalar_overrides.rs  test_square_latency_config.rs  test_subgraph_overrides.rs  test_triangle_wave_latency_config.rs  test_union_types.rs
tests/data/: schema.graphql  schema_with_union.graphql
tests/data/config/: custom_ratios.yaml  custom_scalars.yaml  custom_scalars_and_port.yaml  default_no_cache.yaml  error_ratios.yaml  no_null.yaml  port_and_caching_override.yaml  saw_wave.yaml  square_wave.yaml  subgraph_override.yaml  triangle_wave.yaml
tests/harness/: mod.rs  response.rs
