[package]
name = "subgraph-mock"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
anyhow = "1.0.99"
apollo-compiler = "1.30.0"
arbitrary = "1.4.2"
cached = { version = "0.56.0", features = ["async", "async_tokio_rt_multi_thread"] }
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
http-body-util = "0.1.3"
humantime-serde = "1.1.1"
hyper = "1.7.0"
hyper-util = { version = "0.1.16", features = ["full"] }
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
tokio = { version = "1.47.1", features = ["macros", "parking_lot", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }

[dev-dependencies]
apollo-smith = "0.15"
apollo-parser = "0.8"